# rp2040-ili9341

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ffmpeg_bgr565_240x320x16.h  ili9341.c  ili9341.h  ili9341_lcd.c  ili9341_lcd.pio  lv_conf.h  lv_conf_v9.1.0.h  lv_line_chart.c  lv_line_chart.h  main.c  spi_rp2040.c  spi_rp2040.h  user_config.h  xpt2046.c  xpt2046.h
